document --enable-preview flag and shell aliases