@@ -1,9 +1,6 @@
-* Document the fact that you must pass `--enable-preview` when calling
-  `java -jar --enable-preview target/maven-dep-manager.jar`
-* Document that it's a good idea to add a shell alias for the `java -jar --enable-preview`; give examples for `bash` as
-  well as `fish`
 * the `update` command takes a list of arguments with `groupId:artifactId` or `groupId` or `artifactId`, so it only
   updates those; fail without updating anything, if this can't be found.
 * the `update` command takes a `--patch` or `--minor` parameter to update only path or minor (and patch) updates.
-* add a new command `show-available` that accepts `groupId:artifactId` and displays all available versions (forces a
+* add a new command `show-available` that accepts `groupId:artifactId` or `groupId` or `artifactId` and displays all
+  available versions (forces a
   refresh of the cache)
